@@ -2,8 +2,9 @@ Revision history for Perl extension App-Gimei
 
 {{$NEXT}}
     - delete stale comment
-    - update perl version
+    - update perl version for github actions
     - update actions/checkout@v4
+    - change default value of gender and word_subtype
 
 v0.2.2 2023-09-21T18:50:38Z
     - parse once
